Working on a big refactor and warning fix